Minor changes to fxml

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -40,7 +40,7 @@
         </StackPane>
 
         <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.3" VBox.vgrow="ALWAYS">
-          <VBox>
+          <VBox minWidth="650">
             <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-dark-background"
                        minHeight="100" prefHeight="100" maxHeight="100">
               <padding>
@@ -61,7 +61,7 @@
             </StackPane>
           </VBox>
 
-          <VBox fx:id="employeeList" minWidth="340" prefWidth="340" SplitPane.resizableWithParent="false">
+          <VBox fx:id="employeeList" minWidth="300" SplitPane.resizableWithParent="false">
             <StackPane fx:id="employeeListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
           </VBox>
 
