--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -168,24 +168,16 @@
      -fx-border-top-width: 1px;
 }
 
-.outlet-information .content {
-    -fx-background-color: derive(#1d1d1d, 20%);
-}
-
 .outlet-information {
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 14px;
     -fx-text-fill: white;
 }
 
-.announcement .content {
-    -fx-background-color: derive(#1d1d1d, 20%);
-}
-
 .announcement {
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 14px;
-    -fx-text-fill: yellow;
+    -fx-text-fill: white;
 }
 
 .status-bar {
