--- a/src/main/resources/view/EmployeeListPanel.fxml
+++ b/src/main/resources/view/EmployeeListPanel.fxml
@@ -2,9 +2,12 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-  <Label fx:id="employeeListPanelHeader" styleClass="panel_big_label"/>
+  <StackPane styleClass="pane-with-mint-background" alignment="BASELINE_LEFT">
+    <Label fx:id="employeeListPanelHeader" styleClass="panel_big_label"/>
+  </StackPane>
   <ListView fx:id="employeeListView" VBox.vgrow="ALWAYS" />
 </VBox>
