--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -20,7 +20,7 @@
   <scene>
     <Scene>
       <stylesheets>
-        <URL value="@DarkTheme.css" />
+        <URL value="@PtmanTheme.css" />
         <URL value="@Extensions.css" />
       </stylesheets>
 
@@ -34,13 +34,20 @@
           </Menu>
         </MenuBar>
 
-        <HBox>
-          <StackPane VBox.vgrow="NEVER" HBox.hgrow="ALWAYS" fx:id="commandBoxPlaceholder" styleClass="pane-with-border">
+        <HBox styleClass="pane-with-border">
+          <StackPane VBox.vgrow="NEVER" fx:id="ptmanLogoDisplayPlaceholder" maxWidth="50">
             <padding>
               <Insets top="5" right="10" bottom="5" left="10" />
             </padding>
           </StackPane>
-          <StackPane VBox.vgrow="NEVER" HBox.hgrow="NEVER" fx:id="adminModeDisplayPlaceholder" styleClass="pane-with-border"
+
+          <StackPane VBox.vgrow="NEVER" HBox.hgrow="ALWAYS" fx:id="commandBoxPlaceholder">
+            <padding>
+              <Insets top="5" right="0" bottom="5" left="0" />
+            </padding>
+          </StackPane>
+
+          <StackPane VBox.vgrow="NEVER" HBox.hgrow="NEVER" fx:id="adminModeDisplayPlaceholder"
                       minWidth="105" prefWidth="105" maxWidth="105">
             <padding>
               <Insets top="5" right="10" bottom="5" left="10" />
@@ -53,7 +60,7 @@
             <StackPane VBox.vgrow="NEVER" fx:id="resultDisplayPlaceholder" styleClass="pane-with-dark-background"
                        minHeight="100" prefHeight="100" maxHeight="100">
               <padding>
-                <Insets top="5" right="10" bottom="5" left="10" />
+                <Insets top="10" right="15" bottom="10" left="15" />
               </padding>
             </StackPane>
 
@@ -65,7 +72,7 @@
 
             <StackPane fx:id="timetableViewPlaceholder" prefWidth="340">
               <padding>
-                <Insets top="15" right="15" bottom="15" left="15" />
+                <Insets top="10" right="15" bottom="15" left="15" />
               </padding>
             </StackPane>
           </VBox>
