Add author annotation

--- a/src/main/resources/view/OutletDetailsPanel.fxml
+++ b/src/main/resources/view/OutletDetailsPanel.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<!-- @@author hzxcaryn -->
 <StackPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
     <VBox>
         <Label fx:id="outletNamePanelHeader" styleClass="panel_large_label" />
