--- a/src/main/resources/view/AdminModeDisplay.fxml
+++ b/src/main/resources/view/AdminModeDisplay.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.StackPane?>
 
+<!-- @@author hzxcaryn -->
 <StackPane styleClass="anchor-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <Label fx:id="adminModeDisplay" />
 </StackPane>
