--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -34,6 +34,7 @@
           </Menu>
         </MenuBar>
 
+        <!-- @@author hzxcaryn -->
         <HBox styleClass="pane-with-border">
           <StackPane VBox.vgrow="NEVER" fx:id="ptmanLogoDisplayPlaceholder" maxWidth="50">
             <padding>
@@ -77,7 +78,7 @@
             </StackPane>
           </VBox>
 
-          <VBox fx:id="employeeList" minWidth="300" SplitPane.resizableWithParent="false">
+          <VBox fx:id="employeeList" minWidth="260" SplitPane.resizableWithParent="false">
             <StackPane fx:id="employeeListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
           </VBox>
 
