--- a/src/main/resources/view/PtmanLogoDisplay.fxml
+++ b/src/main/resources/view/PtmanLogoDisplay.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 
+<!-- @@author hzxcaryn -->
 <StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <ImageView fx:id="ptmanLogoView" />
 </StackPane>
