--- a/src/main/resources/view/TimetableView.fxml
+++ b/src/main/resources/view/TimetableView.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 
+<!-- @@author hzxcaryn -->
 <StackPane xmlns="http://javafx.com/javafx/8.0.111">
     <children>
         <BorderPane prefHeight="200.0" prefWidth="200.0" />
