Upgrade employee card

--- a/src/main/resources/view/OutletDetailsPanel.fxml
+++ b/src/main/resources/view/OutletDetailsPanel.fxml
@@ -11,10 +11,10 @@
     <VBox>
         <Label fx:id="outletNamePanelHeader" styleClass="panel_large_label" />
         <HBox fx:id="outletInformation">
-            <Label fx:id="operatingHours">><graphic><FontAwesomeIconView fill="#969696" glyphName="CALENDAR" /></graphic></Label>
-            <Label fx:id="outletContact">><graphic><FontAwesomeIconView fill="#969696" glyphName="PHONE" /></graphic></Label>
-            <Label fx:id="outletEmail">><graphic><FontAwesomeIconView fill="#969696" glyphName="ENVELOPE" /></graphic></Label>
+            <Label fx:id="operatingHours"><graphic><FontAwesomeIconView fill="#7A8492" glyphName="CALENDAR" /></graphic></Label>
+            <Label fx:id="outletContact"><graphic><FontAwesomeIconView fill="#7A8492" glyphName="PHONE" /></graphic></Label>
+            <Label fx:id="outletEmail"><graphic><FontAwesomeIconView fill="#7A8492" glyphName="ENVELOPE" /></graphic></Label>
         </HBox>
-        <Label fx:id="announcement"><graphic><FontAwesomeIconView fill="#969696" glyphName="BULLHORN" /></graphic></Label>
+        <Label fx:id="announcement"><graphic><FontAwesomeIconView fill="#7A8492" glyphName="BULLHORN" /></graphic></Label>
     </VBox>
 </StackPane>
