--- a/src/main/resources/view/PtmanTheme.css
+++ b/src/main/resources/view/PtmanTheme.css
@@ -4,6 +4,10 @@
 }
 
 @font-face {
+    src: url("/fonts/Gotham-Rounded-Medium.ttf");
+}
+
+@font-face {
     font-family: "Proxima Nova Alt";
     src: url("/fonts/Proxima-Nova-Alt-Regular.ttf");
     font-weight: normal;
@@ -154,7 +158,16 @@
 }
 
 .list-cell:filled:selected {
-    -fx-background-color: #EFF2F5;
+    -fx-background-color: #F5F8FA;
+}
+
+.list-cell:filled:selected #idCircle {
+    -fx-fill: #5AC2BC;
+}
+
+.list-cell:filled:selected #id {
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
 }
 
 .list-cell .label {
@@ -185,8 +198,8 @@
 }
 
 .cell_big_label {
-    -fx-font-family: "Gotham Rounded Book";
-    -fx-font-size: 15px;
+    -fx-font-family: "Gotham Rounded Medium";
+    -fx-font-size: 16px;
     -fx-text-fill: #010504;
 }
 
@@ -422,6 +435,11 @@
     -fx-border-width: 0;
 }
 
+#id {
+    -fx-font-family: "Proxima Nova Alt";
+    -fx-text-fill: #5AC2BC;
+}
+
 #commandTypeLabel {
     -fx-font-size: 11px;
     -fx-text-fill: #7A8492;
@@ -445,7 +463,7 @@
 #tags {
     -fx-hgap: 8;
     -fx-vgap: 3;
-    -padding: 3 0 0 0;
+    -fx-padding: 5 0 3 0;
 }
 
 #tags .label {
