--- a/src/main/resources/view/EmployeeListCard.fxml
+++ b/src/main/resources/view/EmployeeListCard.fxml
@@ -26,7 +26,7 @@
         <padding>
           <Insets top="5" right="5" bottom="5" left="15" />
         </padding>
-        <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
+        <Label fx:id="name" styleClass="cell_big_label" text="\$first"/>
         <Label fx:id="phone" styleClass="cell_small_label" text="\$phone"/>
         <Label fx:id="address" styleClass="cell_small_label" text="\$address"/>
         <Label fx:id="email" styleClass="cell_small_label" text="\$email"/>
